
    Additionally, the following libraries use "int" internally, so
    maximum problem sizes are always limited:

      glpk  Qhull

 ** A new container data type--containers.Map--is available.  Map is a
    key/value storage container (a.k.a, a hash) that efficiently allows
    storing and retrieving values by name, rather than by position which
    is how arrays work.

 ** The "names" option used in regular expressions now returns a struct
    array, rather than a struct with a cell array for each field.  This
    change was made for Matlab compatibility.

 ** Other new functions added in 4.4:

      corrcoef
      gsvd
      hgtransform

 ** Deprecated functions.

    The following functions have been deprecated in Octave 4.4 and will
    be removed from Octave 4.8 (or whatever version is the second major
    release after 4.4):

      Function             | Replacement
      ---------------------|------------------

 ** Deprecated graphics properties.

    The following properties or allowed corresponding values have been 
    deprecated in Octave 4.4 and will be removed from Octave 4.8 (or whatever 
    version is the second major release after 4.4):

      Object               | Property                | Value   
      ---------------------|-------------------------|-------------------
      figure               | doublebuffer            |
                           | mincolormap             |
                           | wvisual                 |
                           | wvisualmode             |
                           | xdisplay                |
                           | xvisual                 |
                           | xvisualmode             |
      axes                 | drawmode                |
      annotation           | edgecolor ("rectangle") |
      text                 | fontweight              | "demi" and "light"
      uicontrol            | fontweight              | "demi" and "light"